--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 			<h2 class="about">About This Website</h2>
 				<div class="website">This site was created as proof that I, Hunter Galbraith, did something this week. There is no real reason other than that.</div>
 			<h2 class="special">A Special Thanks</h3>
-				<div class="thanks">My thanks goes out to the awesome people of <a href="http://www.tncodeacademy.com"><strong>Tennessee Code Academy.</strong></a> <!-- Black, White, Black --> Tennessee Code Academy has aided many kids and teens across the state of Tennessee discover the wonders of computer programming.</div>
+				<div class="thanks">My thanks goes out to the awesome people of <a href="http://www.tncodeacademy.com"><strong>Tennessee Code Academy.</strong></a> Tennessee Code Academy has aided many kids and teens across the state of Tennessee discover the wonders of computer programming.</div>
 		</body>
 	</html>
